--- a/css/mobile.css
+++ b/css/mobile.css
@@ -91,7 +91,16 @@ font-weight: 900;
   margin: 5%;
 }
 
-.choose {
+.choise {
+display: flex;
+
+}
+
+a {
+  text-decoration: none;
+}
+
+.choose-preference {
   border-radius: 20px;
   background-color: #f7f7f7;
   width: 40%;
