--- a/css/mobile.css
+++ b/css/mobile.css
@@ -22,6 +22,13 @@ h3 {
   font-family: "roboto", sans-serif;
 }
 
+/****Loading spinner****/
+
+
+
+
+/****Fin loading spinner****/
+
 /*****Header*****/
 header {
   padding: 1rem;
@@ -172,13 +179,13 @@ margin-top: 100px;
 
 .backround-card {
   width: 90%;
-  margin: 5%;
-  cursor: pointer;
-  border-radius: 30px;
-  background: white;
-  box-shadow: 2px 2px 5px #aaaaaa;
-  padding-bottom: 1%;
-  position: relative;
+    margin: 5%;
+    cursor: pointer;
+    border-radius: 15px;
+    background: white;
+    box-shadow: 0px 4px 15px #aaaaaa;
+    padding-bottom: 1%;
+    position: relative;
  
 }
 
@@ -211,5 +218,35 @@ margin-top: 100px;
 
 .flex-menu {    /*Pour que les coeurs se trouvent à coté à droite du  titre et du paragraphe(qui eux, sont l'un en dessous de l'autre)*/
 display: flex;    
+align-items: center;
+justify-content: space-between;
+padding: 0 30px;
+}
+
+.title {
+  margin-bottom: 0;
+  font-weight: bold;
+}
+
+.paragraph {   /*Sans margin-bottom sur title, paragraph ne peut pas se decaler en dessous de title*/
+  margin-top: 0;
+}
+
+.heart {
+  font-size: 30px;
+  position: relative;
+  cursor: pointer;
+}
+
+.fas.fa-heart {   /*full*//***Le remplissage noire est en display none et est suppeposé sur le heart empty*/
+  position: absolute;
+  top: 3px;
+  left: 0;
+  z-index: 4;
+  display: none;
+}
+
+.far.fa-heart {   /*empty*/
+  position: relative;
 }
           
