--- a/css/mobile.css
+++ b/css/mobile.css
@@ -228,7 +228,7 @@ padding: 0 30px;
   font-weight: bold;
 }
 
-.paragraph {   /*Sans margin-bottom sur title, paragraph ne peut pas se decaler en dessous de title*/
+.paragraph {   /*Sans margin-bottom sur title, paragraph ne peut pas se decaler juste en dessous de title*/
   margin-top: 0;
 }
 
@@ -255,7 +255,7 @@ footer {
   width: 100%;
   display: flex;
   flex-direction: column;
-  padding: 0 20px;
+  padding: 5%
 }
 
 #white-logo {
@@ -264,11 +264,13 @@ footer {
     font-size: small;  /*taille police*/
     font-weight: normal; /*epaisseur*/
     font-style: italic;  /*style police*/
+    padding: 0 50px;
 }
 
 .a-footer-section {
 text-decoration: none;
 color: white;
+padding: 0 50px;
 }
 
 .flex-footer {
@@ -284,5 +286,5 @@ font-size: xx-small;
 
 .option {
   padding: 0 20px;
-  margin-bottom: 0;
+  
 }
