--- a/css/desktop.css
+++ b/css/desktop.css
@@ -5,4 +5,89 @@
 
 @media all and (min-width: 1240px) {
 
+
+
+
+    .title-h1, 
+    #discover {
+        width: 100%;
+    }
+
+    .explore-restaurant {
+    width: 15%;
+    }
+
+    #choice {
+        display: flex;
+        flex-direction: row;
+        width: 80%;
+        justify-content: space-between;
+    }
+
+    /******Troiséme section, restaurants et nom des menus*******/
+
+
+#third-section {
+   padding-top: 1px;
+   padding-bottom: 0%;
 }
+
+.title-restaurant {
+margin: 15px 80px;
+}
+
+
+.restaurants {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+
+    .backround-card {
+        width: 35%;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 5%;
+    }
+
+    .pictures {
+        width: 100%;
+        
+    }
+
+    .new {
+        position: relative;
+        right: 0;
+    }
+
+   
+.fas.fa-heart {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    z-index: 1;
+}
+
+
+
+
+
+
+
+
+/******************Footer*************/
+footer {
+    flex-direction: row;
+    padding: 2%;
+}
+
+.flex-info {
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+}
+
+
+
