--- a/css/mobile.css
+++ b/css/mobile.css
@@ -40,7 +40,7 @@ h3 {
   display: flex;
   align-items: center;
   justify-content: center;
-  /*display: none;*/
+  display: none;
 }
 
 #spinner {
