--- a/css/mobile.css
+++ b/css/mobile.css
@@ -371,8 +371,13 @@ footer a {
 /***Fin header***/
 
 /*section (la seule de la page)*/
-section {
+.name-restaurants {                        /***section de la page***/
   background-color:#f6f6f6;
+  background-color: #f6f6f6;
+    margin-top: -30px;
+    border-radius: 40px 40px 0 0;
+    position: relative;
+    padding: 0 20px;
 }
 
 .img-menus {
@@ -384,6 +389,11 @@ section {
 align-items: center;
 justify-content: space-between;
 margin: 0 30px;
+}
+
+.title-bold {
+  font-weight: bolder;
+  font-family: 'Shrikhand';
 }
 
 /***Entrées***/
