--- a/css/mobile.css
+++ b/css/mobile.css
@@ -135,7 +135,7 @@ main {
 .explore-restaurant {
   border-radius: 30px;
   background: linear-gradient(#ff79da, #9356dc);
-  width: 70%;
+  width: 55%;
   border: none;
   color: white;
   text-align: center;
@@ -382,6 +382,8 @@ footer a {
 
 .img-menus {
   width: 100%;
+  height: 200px;
+  object-fit: cover;
 }
 
 .flex-heart {  /*Alignement du titre et des coeurs*/
@@ -428,9 +430,6 @@ margin: 0 30px;
   padding: 0 30px;
 }
 
-
-
-
 .flex-info-detail-menu {
   display: flex;
   justify-content: space-between;
@@ -457,4 +456,9 @@ margin: 0 30px;
   flex-direction: row;
   align-items: center;
   margin-left: 190px;
+}
+
+#margin-commander {  /**Est identique au bouton violet de la la page d'accueil, css L135, j'ai ajouté cet id pour les margin*/
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
