--- a/css/home-desktop.css
+++ b/css/home-desktop.css
@@ -1,5 +1,5 @@
 /*******************************************BREAKPOINTS************************************************/
-/*********version desktop*************/
+/*********version desktop feuille de style home-desktop.css*************/
 
 /**************************** @media 1240px *************************/ 
 
