--- a/css/menu-tablette.css
+++ b/css/menu-tablette.css
@@ -1,5 +1,5 @@
 /*******************************************BREAKPOINTS************************************************/
-/*************Version tablette*****************/
+/*************Feuille de style menu-tablette.css projet 4 Ohmyfood Mobile First / Version tablette*****************/
 
 @media all and (min-width: 768px) and (max-width: 1240px) {
 
