--- a/css/home-mobile.css
+++ b/css/home-mobile.css
@@ -1,4 +1,4 @@
-/***Feuille de style mobile.css projet 4 Ohmyfood Mobile First***/
+/***Feuille de style home-mobile.css projet 4 Ohmyfood Mobile First***/
 /***J'intégre d'abord la version mobile puis tablette puis desktop***/
 
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap"); /***On peut mettre ce lien de google font (police d'écriture) soit ds le CSS soit ds le html***/
@@ -297,6 +297,7 @@ padding: 0 30px;
   font-size: 30px;
   position: relative;
   cursor: pointer;
+  height: 17px; /*pour s'aligner avec le nom du restaurant*/
 }
 
 .fas.fa-heart {   /*full*//***Le remplissage noire est en display none et est suppeposé sur le heart empty*/
@@ -361,111 +362,4 @@ footer a {
 }
 
 /*******************************Fin code css pour la page index.html**********************/
-
-/****************************************CSS pour les menus des quatres restaurants*****************************/
-/***Header***/
-.arrow-and-img {
-  display: flex;
-  align-items: center;
-}
-
-.fas.fa-arrow-left {  /***Arrow fléche pour retourner sur index.html***/
-  color: black;
-}
-/***Fin header***/
-
-/*section (la seule de la page)*/
-.name-restaurants {                        /***section de la page***/
-  background-color:#f6f6f6;
-  background-color: #f6f6f6;
-    bottom: 20px;   /*permet de faire remonter l choix des menus sur l'image*/
-    border-radius: 40px 40px 0 0;
-    position: relative;
-    padding: 0 20px;
-}
-
-.img-menus {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-}
-
-.flex-heart {  /*Alignement du titre et des coeurs*/
-  display: flex;
-align-items: center;
-justify-content: space-between;
-margin: 0 30px;
-}
-
-.title-bold {
-  font-weight: bolder;
-  font-family: 'Shrikhand';
-  font-size: 23px;
-}
-
-/***Entrées***/
-
-.title-border-bottom {
-  border-bottom: 3px solid;  /*de 390 à 393 c'est pour le brder-bottom, le trait vert en dessous de entrée*/
-  width: 10%;
-  border-color: #99e2d0;
-  padding-bottom: 2%;
-  font-weight: lighter; /*pour entrée pour le gras de la police"*/
-  font-family: "Roboto", sans-serif;
-  font-size: 17px;   /*Taille de la police d'écriture*/
-  padding: 30px 0 0 0; /*Pour décaler avec le titre la palette du goût*/
-}
-
-.choice-menus {
-  padding: 0 30px;
-}
-
-.title-border-bottom {
-  border-bottom: 3px solid; /*de 390 à 393 c'est pour le brder-bottom, le trait vert en dessous de entrée*/
-  width: 10%;
-  border-color: #99e2d0;
-  padding-bottom: 2%;
-  font-weight: lighter; /*pour entrée pour le gras de la police"*/
-  font-family: "Roboto", sans-serif;
-  font-size: 17px; /*Taille de la police d'écriture*/
-  padding: 30px 0 0 0; /*Pour décaler avec le titre la palette du goût*/
-}
-
-.choice-menus {
-  padding: 0 30px;
-}
-
-.flex-info-detail-menu {
-  display: flex;
-  justify-content: space-between;
-  border-radius: 10px;
-  box-shadow: 2px 2px 6px #aaa;
-  width: 100%;
-  cursor: pointer;
-  margin-top: 25px;
-  position: relative;
-  flex-grow: 1;
-  overflow: hidden;
-  align-items: center;
-  height: 50px;
-}
-
-.title-menu {
-  font-size: small;
-  margin-left: 5px;
-}
-
-.price-check {
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row;
-  align-items: center;
-  margin-left: 190px;
-}
-
-#margin-commander {  /**Est identique au bouton violet de la la page d'accueil, css L135, j'ai ajouté cet id pour les margin*/
-  margin-top: 40px;
-  margin-bottom: 40px;
-}
-
 
