--- a/css/home-mobile.css
+++ b/css/home-mobile.css
@@ -334,7 +334,7 @@ footer a {
 
 .white-logo {
   font-family: 'Shrikhand';
-  font-size: small;
+  font-size: 18px;
   font-weight: normal;
   font-style: italic;
   padding: 0 10px;
