--- a/css/menu-mobile.css
+++ b/css/menu-mobile.css
@@ -64,7 +64,7 @@ margin: 0 5px;
   margin-bottom: 0; /*pour enlever marge entre titre et entrée*/
 }
 
-/***Entrées***/
+/***Menus-Entrées***Plats***Desserts***/
 
 .title-border-bottom {
   border-bottom: 3px solid;  /*de 390 à 393 c'est pour le brder-bottom, le trait vert en dessous de entrée*/
@@ -78,37 +78,151 @@ margin: 0 5px;
   margin-top: 0; /*remonte le titre entrée*/
 }
 
-.choice-menus {
-  padding: 0 5px;
-}
-
-.flex-info-detail-menu {
+.choice-menu {
   display: flex;
   justify-content: space-between;
-  border-radius: 10px;
+  border-radius: 24px;
   box-shadow: 2px 2px 6px #aaa;
   width: 100%;
   cursor: pointer;
   margin-top: 25px;
   position: relative;
-  flex-grow: 1;
-  overflow: hidden;
+  flex-grow: 1; 
+  overflow: hidden; /*Est une propriété raccourcie qui définit comment gérer le dépassement du contenu d'un élément dans son bloc*/
   align-items: center;
-  height: 50px;
+}
+
+.name-menu {
+  margin-left: 5px;
+  text-overflow: ellipsis; /*Le texte peut être rogné (clipping), afficher une ellipse ('…', */
+  white-space: nowrap; /* Façon dont les blancs sont gérés au sein de l'élément.*/
+  overflow: hidden;
+  position: relative; 
 }
 
 .title-menu {
-  font-size: small;
-  margin-left: 5px;
+  margin-bottom: 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
-.price-check {
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row;
-  align-items: center;
-  margin-left: 190px;
+.small-title-menu {
+  margin-top: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
+
+.tarif {
+  margin-left: auto;
+}
+
+.price {
+  padding-right: 18px;
+  padding-top: 30px;
+  transition: ease-out 2s;
+}
+
+/*coche coulissante de droite à gauche*/
+.check {
+  background-color: #99e2d0;
+  color: white;
+  font-weight: bold;
+  border: none;
+  border-radius: 0 12px 12px 0;
+  /* padding: 0 1.25rem;*/
+  font-size: 1rem;
+  cursor: pointer;
+  display: inline-flex;
+  align-items: center;
+  opacity: 0; /*invisible*/
+  /*width: auto;  /*Permet de ne pas ecraser le cercle en version mobile*/
+  width: 44px;
+  display: flex;
+  overflow: hidden; /*Le contenu est rogné si besoin pour s'inscrire dans la boîte de remplissage (padding) et aucune barre de défilement n'est affichée*/
+  height: 80px;
+  position: absolute;
+  right: -50px;
+  padding-left: 15px;
+  padding-right: 15px;
+  transition: ease-out 1s;
+}
+
+.check:hover {
+  opacity: 1;
+  right: 0px;
+  transition: right 1s;
+}
+
+.choice-menu:hover .price {
+  margin-right: 60px;
+  transition: margin-right 1s;
+}
+
+.choice-menu:hover .check {
+  right: 0px;
+  opacity: 1; /*visible*/
+  transition-duration: 2s;
+  transition: right 2s;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.choice-menu:hover .fa-check.fas.logo_check {
+  transform: rotate(360deg);  /*tour sur soi-méme*/
+  transition: transform 2s;
+  margin: auto;
+  align-items: center;
+}
+
+.fa-check.fas.logo_check {
+  display: flex;
+  align-items: center;
+  background-color: white;
+  color: #99e2d0;
+  cursor: pointer;
+  justify-content: center;
+  left: 0;
+  width: 22px; 
+  height: 22px; 
+  border-radius: 11px; 
+  object-fit: cover;
+  cursor: pointer;
+  overflow: hidden;
+}
+
+.fa-check.fas.logo_check:hover {
+  transform: rotate(360deg);
+  transition: transform 0.5s;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 #margin-commander {  /**Est identique au bouton violet de la la page d'accueil, css L135, j'ai ajouté cet id pour les margin*/
   margin-top: 40px;
