--- a/css/home-tablette.css
+++ b/css/home-tablette.css
@@ -2,17 +2,41 @@
 /*************Version tablette/feuille de style homme-tablette.css*****************/
 
 @media all and (min-width: 768px) and (max-width: 1240px) {
+  .backround-card {
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
+  /******************Footer*************/
+  /****Identique à la maquette version desktop****/
 
+  .flex-choice {
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
+  footer {
+    padding: 2%;
+    flex-direction: row;
+    justify-content: flex-end;
+  }
 
+  .footer-reverse {
+    display: flex;
+    flex-direction: row-reverse;
+  }
 
+  .white-logo {
+    margin: unset;
+    margin: 0 50px;
+  }
 
+  .flex-info {
+    flex-direction: row;
 
-
-
-
-
-
-
+    column-gap: 50px;
+    margin: unset;
+  }
 }
