--- a/css/menu-mobile.css
+++ b/css/menu-mobile.css
@@ -57,6 +57,10 @@ justify-content: space-between;
 margin: 0 5px;
 }
 
+.heart {
+  height: 20px;
+}
+
 .title-bold {
   font-weight: bolder;
   font-family: 'Shrikhand';
@@ -71,7 +75,7 @@ margin: 0 5px;
   width: 10%;
   border-color: #99e2d0;
   padding-bottom: 2%;
-  font-weight: lighter; /*pour entrée pour le gras de la police"*/
+  font-weight: 300; /*pour entrée pour le gras de la police"*/
   font-family: "Roboto", sans-serif;
   font-size: 17px;   /*Taille de la police d'écriture*/
   padding: 30px 0 0 0; /*Pour décaler avec le titre la palette du goût*/
@@ -93,7 +97,7 @@ margin: 0 5px;
 }
 
 .name-menu {
-  margin-left: 5px;
+  margin-left: 15px;
   text-overflow: ellipsis; /*Le texte peut être rogné (clipping), afficher une ellipse ('…', */
   white-space: nowrap; /* Façon dont les blancs sont gérés au sein de l'élément.*/
   overflow: hidden;
@@ -104,6 +108,7 @@ margin: 0 5px;
   margin-bottom: 0;
   text-overflow: ellipsis;
   overflow: hidden;
+  font-size: 18px;
 }
 
 .small-title-menu {
@@ -111,6 +116,7 @@ margin: 0 5px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  font-size: 15px;
 }
 
 .tarif {
