--- a/css/home-mobile.css
+++ b/css/home-mobile.css
@@ -132,8 +132,9 @@ main {
 }
 
 .explore-restaurant {
-  border-radius: 30px;
-  background: linear-gradient(#ff79da, #9356dc);
+  border-radius: 25px;
+  box-shadow : 0px 4px 10px rgba(0, 0, 0, 0.25);
+  background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
   width: 55%;
   border: none;
   color: white;
@@ -146,8 +147,8 @@ main {
 }
 
 .explore-restaurant:hover {
-  background: #d979ff; /*** !!!!Animation CSS, au hover, couleur qui s'éclairsit, l'ombre plus visible!!!!*/
-  box-shadow: 0px 5px 10px 3px #c6c6c6;
+ box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);            /*** !!!!Animation CSS, au hover, couleur qui s'éclairsit, l'ombre plus visible!!!!*/
+ background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
 }
 
 /***************************************Deuxiéme section************************************/
