--- a/css/home-desktop.css
+++ b/css/home-desktop.css
@@ -5,6 +5,11 @@
 
 @media all and (min-width: 1240px) {
 
+  #Paris {
+     font-weight: 500;
+     font-size: 16px;
+     line-height: 19px;
+  }
 
   #reservez {
     margin-left: 6px;
@@ -18,6 +23,7 @@
 
 .explore-restaurant {
   font-size: 16px;
+  margin-bottom: 5px
 }
 
     .title-h1, 
@@ -26,8 +32,7 @@
     }
 
     .title-h1 {
-        margin-left: 135px;
-        font-size: 24px; 
+       font-size: 24px; 
         font-weight:  700;
     }
 
@@ -35,11 +40,15 @@
     width: 15%;
     }
 
+    #second-section {
+      margin: 0%;
+      padding: 50px 180px;
+  }
+
     #choice {
         display: flex;
         flex-direction: row;
-        width: 80%;
-        justify-content: space-between;
+        gap: 25px;
         margin-left: auto;   /*en utilsant auto sur margin-left et margin-right les éléments se placent au milieu*/
         margin-right: auto;
         
@@ -102,9 +111,15 @@
 
 .title-restaurant {
 margin: 15px 80px;
-margin-left: 210px
+margin-left: 210px;
+font-size:  24px;
+font-weight: 700;
 }
 
+.flex-choice {
+ width: 323px;
+ gap: 25px;
+}
 
 .restaurants {
     display: flex;
